--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,116 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #2c2c2c;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.border {
+    border: 1px solid black;
+}
+
+/* colours */
+.bg-white {
+    background-color: #ffffff;
+}
+
+.white {
+    color: #ffffff;
+}
+
+.bg-light-grey {
+    background-color: #e5e8e1;
+}
+
+.light-grey {
+    color: #e5e8e1;
+}
+
+.bg-grey {
+    background-color: #acaca7;
+}
+
+.grey {
+    color: #acaca7;
+}
+
+.bg-dark-grey {
+    background-color: #848484;
+}
+
+.dark-grey {
+    color: #848484;
+}
+
+.bg-light-black {
+    background-color: #3c3c3c;
+}
+
+.light-black {
+    color: #3c3c3c;
+}
+
+.bg-black {
+    background-color: #2c2c2c;
+}
+
+.black {
+    color: #2c2c2c;
+}
+
+.bg-light-green {
+    background-color: #a4d454;
+}
+
+.light-green {
+    color: #a4d454;
+}
+
+.bg-green {
+    background-color: #80b24b;
+}
+
+.green {
+    color: #80b24b;
+}
+
+.bg-dark-green {
+    background-color: #4c843c
+}
+
+.dark-green {
+    color: #4c843c
+}
+
+
+/* flexbox */
+.flex {
+    display: flex;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-ai-c {
+    align-items: center;
+}
+
+.flex-jc-c {
+    justify-content: center;
+}
+
+.flex-jc-sb {
+    justify-content: space-between;
 }
