--- a/client/src/header/Header.css
+++ b/client/src/header/Header.css
@@ -29,6 +29,7 @@ div > button:last-child {
     height: 4vh;
     padding-top: 5px;
     padding-bottom: 5px;
+    position: fixed;
     width: 100vw;
 }
 
