added and styled post

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,6 +107,10 @@ body {
     align-items: center;
 }
 
+.flex-ac-c {
+    align-content: center;
+}
+
 .flex-jc-c {
     justify-content: center;
 }
