--- a/client/src/post/Post.css
+++ b/client/src/post/Post.css
@@ -1,30 +1,31 @@
 .post {
     border-radius: 10px;
-    max-height: 500px;
+    height: 250px;
     margin: 25px;
-    width: 70vw;
+    width: 60vw;
 }
 
 .post-votes {
     border-radius: 10px 0 0 10px;
     padding-top: 10px;
-    width: 10%;
+    width: 5%;
 }
 
 .vote-btn {
     background-color: transparent;
-    border: 1px solid black;
+    border: none;
+    cursor: pointer;
     text-align: center;
     text-decoration: none;
 }
 
 .post-content {
     padding: 10px;
-    width: 90%;
+    width: 95%;
 }
 
 .post-details {
-
+    width: 100%;
 }
 
 a {
@@ -35,8 +36,11 @@ a:hover {
     cursor: pointer;
 }
 
+.author {
+    text-decoration: underline;
+}
 
-.post-btns {
-
+.post-btns > a > span {
+    margin-right: 5px;
 }
 
