--- a/client/src/header/Header.css
+++ b/client/src/header/Header.css
@@ -1,4 +1,4 @@
-.navbar-btn {
+.header-btn {
     border: none;
     border-radius: 1rem;
     cursor: pointer;
@@ -10,7 +10,7 @@
     min-width: 6vw;
 }
 
-.navbar-btn:nth-child(2):hover {
+.header-btn:nth-child(2):hover {
     background-color: #80b24b;
 }
 
@@ -37,11 +37,12 @@ div > button:last-child {
     width: 40px;
 }
 
-.navbar {
+.header {
     height: 4vh;
     padding-top: 5px;
     padding-bottom: 5px;
     position: sticky;
+    top: 0;
     width: 100vw;
 }
 
