--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
     background-color: #2c2c2c;
+    box-sizing: border-box;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,6 +11,15 @@ body {
 
 .border {
     border: 1px solid black;
+}
+
+/* font-size */
+.small-font {
+    font-size: small;
+}
+
+.large-font {
+    font-size: large;
 }
 
 /* colours */
