--- a/client/src/post/Post.css
+++ b/client/src/post/Post.css
@@ -1,7 +1,13 @@
 .post {
+    border: 2px solid #2c2c2c;
     border-radius: 10px;
     height: 250px;
     width: 60vw;
+}
+
+.post:hover {
+    border: 2px solid #80b24b;
+    cursor: pointer;
 }
 
 .post-votes {
@@ -18,6 +24,11 @@
     text-decoration: none;
 }
 
+.vote-btn:hover {
+    color: #ffffff;
+    background-color: #acaca7;
+}
+
 .post-content {
     padding: 10px;
     width: 95%;
@@ -28,7 +39,17 @@
 }
 
 .post-btns > a {
-    margin-right: 30px;
+    border: 1px solid transparent;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.post-btns > a:hover {
+    border: 1px solid #acaca7;
+    border-radius: 5px;
+    background-color: #e5e8e1;
 }
 
 a:hover {
