added post header

--- a/client/src/post/Post.css
+++ b/client/src/post/Post.css
@@ -1,66 +1,4 @@
 .post {
-    border: 2px solid #2c2c2c;
-    border-radius: 10px;
-    height: 250px;
-    width: 60vw;
-}
-
-.post:hover {
-    border: 2px solid #80b24b;
-    cursor: pointer;
-}
-
-.post-votes {
-    border-radius: 10px 0 0 10px;
-    padding-top: 10px;
-    width: 5%;
-}
-
-.vote-btn {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-}
-
-.vote-btn:hover {
-    color: #ffffff;
-    background-color: #acaca7;
-}
-
-.post-content {
-    padding: 10px;
-    width: 95%;
-}
-
-.post-details {
+    height: 100%;
     width: 100%;
 }
-
-.post-btns > a {
-    border: 1px solid transparent;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
-.post-btns > a:hover {
-    border: 1px solid #acaca7;
-    border-radius: 5px;
-    background-color: #e5e8e1;
-}
-
-a:hover {
-    cursor: pointer;
-}
-
-.author {
-    text-decoration: underline;
-}
-
-.post-btns > a > span {
-    margin-right: 5px;
-}
-
