--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+    text-decoration: none;
+}
+
 .border {
     border: 1px solid black;
 }
