--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,8 +13,12 @@ a {
     text-decoration: none;
 }
 
+a:visited {
+    color: inherit;
+}
+
 .border {
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 /* font-size */
