--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -40,8 +40,7 @@
 
 .post-btns > a {
     border: 1px solid transparent;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-right: 10px;
     padding-top: 8px;
     padding-bottom: 8px;
 }
