--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -38,14 +38,14 @@
     width: 100%;
 }
 
-.post-btns > a {
+.post-btn {
     border: 1px solid transparent;
     margin-right: 10px;
     padding-top: 8px;
     padding-bottom: 8px;
 }
 
-.post-btns > a:hover {
+.post-btn:hover {
     border: 1px solid #acaca7;
     border-radius: 5px;
     background-color: #e5e8e1;
@@ -59,7 +59,7 @@ a:hover {
     text-decoration: underline;
 }
 
-.post-btns > a > span {
+.post-btn > span {
     margin-right: 5px;
 }
 
