implemented post thread page

--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -39,7 +39,9 @@
 }
 
 .post-btn {
+    background-color: transparent;
     border: 1px solid transparent;
+    cursor: pointer;
     margin-right: 10px;
     padding-top: 8px;
     padding-bottom: 8px;
