--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    cursor: pointer;
+}
+
 a:visited {
     color: inherit;
 }
@@ -103,7 +107,6 @@ a:visited {
 .dark-green {
     color: #4c843c
 }
-
 
 /* flexbox */
 .flex {
