--- a/client/src/form/Form.css
+++ b/client/src/form/Form.css
@@ -21,7 +21,6 @@
 }
 
 .form-field {
-    margin-bottom: 10px;
     width: 100%;
 }
 
@@ -48,6 +47,7 @@
     font-size: 14px;
     font-weight: 550;
     padding: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
     text-decoration: none;
