--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #2c2c2c;
-    box-sizing: border-box;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -18,13 +21,21 @@ a:hover {
     cursor: pointer;
 }
 
-.border {
-    border: 1px solid white;
+textarea {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* font-size */
 .small-font {
     font-size: small;
+}
+
+.medium-font {
+    font-size: medium;
 }
 
 .large-font {
