--- a/client/src/comment/Comment.css
+++ b/client/src/comment/Comment.css
@@ -54,3 +54,8 @@
 .submit-comment-btn {
     margin: 0;
 }
+
+.submit-comment-btn:disabled {
+    background-color: #acaca7;
+    cursor: not-allowed;
+}
