--- a/client/src/comment/Comment.css
+++ b/client/src/comment/Comment.css
@@ -23,7 +23,7 @@
     width: 100%;
 }
 
-.comment-area {
+.text-area {
     border: none;
     box-shadow: none;
     min-height: 100px;
@@ -51,11 +51,11 @@
     width: 30px;
 }
 
-.submit-comment-btn {
+.submit-btn {
     margin: 0;
 }
 
-.submit-comment-btn:disabled {
+.submit-btn:disabled {
     background-color: #acaca7;
     cursor: not-allowed;
 }
