--- a/client/src/header/Header.css
+++ b/client/src/header/Header.css
@@ -66,7 +66,7 @@
     margin-right: 10px;
 }
 
-.profile {
+.profile-icon {
     background-color: transparent;
     border: 2px solid transparent;
     border-radius: 5px;
@@ -74,7 +74,7 @@
     text-decoration: none;
 }
 
-.profile:hover {
+.profile-icon:hover {
     border: 2px solid #acaca7;
 }
 
@@ -94,6 +94,10 @@
     padding: 10px;
     width: 100%;
     height: 100%;
+}
+
+.profile-menu-btn > span:first-child {
+    margin-right: 5px;
 }
 
 .profile-menu-btn:hover {
