--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -2,7 +2,7 @@
     border: 2px solid #2c2c2c;
     border-radius: 10px;
     height: 250px;
-    width: 60vw;
+    width: 100%;
 }
 
 .post-card:hover {
