added vote count and vote button styling

--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -29,6 +29,11 @@
     background-color: #acaca7;
 }
 
+.voted {
+    color: #ffffff;
+    background-color: #acaca7;
+}
+
 .post-content {
     padding: 10px;
     width: 95%;
