--- a/client/src/post/Post.css
+++ b/client/src/post/Post.css
@@ -5,3 +5,26 @@
 .post {
     width: 60vw;
 }
+
+.edit-btn {
+    background-color: transparent;
+    border: 1px solid transparent;
+    color: inherit;
+    cursor: pointer;
+    /* font-size: 16px; */
+    margin-right: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.on {
+    border: 1px solid #acaca7;
+    border-radius: 5px;
+    background-color: #e5e8e1;
+}
+
+.edit-btn:hover {
+    border: 1px solid #acaca7;
+    border-radius: 5px;
+    background-color: #e5e8e1;
+}
