--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,12 +21,20 @@ a:hover {
     cursor: pointer;
 }
 
+p {
+    white-space: pre-wrap;
+}
+
 textarea {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.border {
+    border: 1px solid black;
 }
 
 /* font-size */
