--- a/client/src/post/NewPost.css
+++ b/client/src/post/NewPost.css
@@ -1,6 +1,19 @@
 .new-post {
+    border: 2px solid #2c2c2c;
+    border-radius: 10px;
     margin-top: 10px;
+    padding: 10px;
     width: 60vw;
+}
+
+.post-area {
+    border: 2px solid #e5e8e1;
+    padding: 10px;
+    min-height: 200px;
+    box-shadow: none;
+    outline: none;
+    resize: vertical;
+    width: 100%;
 }
 
 .title {
