--- a/client/src/post/PostCard.css
+++ b/client/src/post/PostCard.css
@@ -2,6 +2,8 @@
     border: 2px solid #2c2c2c;
     border-radius: 10px;
     height: 250px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     width: 100%;
 }
 
