--- a/client/src/profile/Profile.css
+++ b/client/src/profile/Profile.css
@@ -7,12 +7,13 @@
     border: 2px solid #2c2c2c;
     border-radius: 10px;
     height: 20%;
-    margin-top: 10px;
+    margin-top: 5px;
     padding: 15px;
     width: 35%;
 }
 
 .profile-container {
+    padding-top: 10px;
     width: 80vw;
 }
 
